--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,6 +94,12 @@
         </div>
       </div>
     </nav>
-    <%= yield %>
+
+    <div class="columns mt-6">
+      <div class="column is-2">
+
+      </div>
+      <%= yield %>
+    </div>
   </body>
 </html>
