--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,8 +96,24 @@
     </nav>
 
     <div class="columns mt-6">
-      <div class="column is-2">
-
+      <div class="column is-2 ml-6">
+        <aside class="menu box">
+          <p class="menu-label">
+            General
+          </p>
+          <ul class="menu-list">
+            <li><%= link_to 'Home', root_path %></li>
+            <li><%= link_to 'New Post', root_path %></li>
+          </ul>
+          <p class="menu-label">
+            Friends
+          </p>
+          <ul class="menu-list">
+            <li><%= link_to 'My Friends', root_path %></li>
+            <li><%= link_to 'Friend Requests', friend_requests_path %></li>
+            <li><%= link_to 'Search For Friends', users_path %></li>
+          </ul>
+        </aside>
       </div>
       <%= yield %>
     </div>
