--- a/app/assets/stylesheets/friendships.scss
+++ b/app/assets/stylesheets/friendships.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Friendships controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.friend-card {
+    max-height: 35vh;
+}
