--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <p class="alert"><%= alert %></p>
     </div>
 
-    <nav class="navbar is-info is-fixed-top" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-link is-fixed-top" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <%= link_to 'odin-facebook', root_path, class: 'navbar-item' %>
 
