--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <div class="column is-6 is-offset-1">
+    <%= render template: 'posts/new' %>
     <% @posts.each do |post| %>
         <article class="post columns box m-2">
             <div class="column is-2">
