Moving main section column div to application html page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,7 +112,9 @@
           </ul>
         </aside>
       </div>
-      <%= yield %>
+      <div class="column is-6 is-offset-1">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
