--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,7 +12,7 @@
                     <%= f.text_area :body, placeholder: "What's on your mind?", class: 'textarea is-small' %>
                 </div>
             </div>
-            <%= f.submit 'Post', class: 'button is-pulled-right is-link' %>
+            <%= f.submit :Post, class: 'button is-pulled-right is-link' %>
         </div>
     </div>
 <% end %>
