Adding like to posts

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,6 +7,22 @@
     <div class="column is-9">
         <p class="is-text-weight-semibold is-size-6"><%= post.user.name %></p>
         <p class="is-size-6"><%= post.body %></p>
+        <div>
+            <% like = Like.locate_like(current_user.id, post.id)%>
+            <% if like.empty? %>
+                <%= link_to likes_path(post_id: post), method: :post, class:'is-pulled-right' do %>
+                    <span class="icon">
+                        <%= icon('far', 'thumbs-up') %>
+                    </span>
+                <% end %>
+            <% else %>
+                <%= link_to like_path(like[0]), method: :delete, class:'is-pulled-right' do %>
+                    <span class="icon">
+                        <%= icon('fas', 'thumbs-up') %>
+                    </span>
+                <% end %>
+            <% end %>
+        </div>
     </div>
     <% if current_user.id == post.user_id %>
         <div class="column is-1">
