--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -116,6 +116,7 @@
           <ul class="menu-list">
             <li><%= link_to 'New Post', new_post_path %></li>
             <li><%= link_to 'My Posts', user_posts_path %></li>
+            <li><%= link_to 'My Liked Posts', likes_path %></li>
           </ul>
           <p class="menu-label">
             Friends
