updating search for friends to not include current friends

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,26 +1,28 @@
 <div class="columns is-flex-wrap-wrap">
     <% @users.each do |user| %>
-        <div class="column is-4 block has-text-centered">
-            <figure class="is-48x48">
-                <%= image_tag 'https://bulma.io/images/placeholders/48x48.png', alt: 'Placeholder Image' %>
-            </figure>
-            <p><%= user.name %></p>
-            <% friend_request = FriendRequest.locate_request(current_user.id, user.id) %>
-            <% if friend_request.empty? %>
-                <%= link_to friend_requests_path(user_id: current_user.id, friend_id: user.id), method: :post, class: 'button is-small' do %>
-                    <span>Add Friend</span>
-                    <span class="icon">
-                        <%= icon('fas', 'user-plus') %>
-                    </span>
+        <% unless current_user.friends.exists?(user.id) %>
+            <div class="column is-4 block has-text-centered">
+                <figure class="is-48x48">
+                    <%= image_tag 'https://bulma.io/images/placeholders/48x48.png', alt: 'Placeholder Image' %>
+                </figure>
+                <p><%= user.name %></p>
+                <% friend_request = FriendRequest.locate_request(current_user.id, user.id) %>
+                <% if friend_request.empty? %>
+                    <%= link_to friend_requests_path(user_id: current_user.id, friend_id: user.id), method: :post, class: 'button is-small' do %>
+                        <span>Add Friend</span>
+                        <span class="icon">
+                            <%= icon('fas', 'user-plus') %>
+                        </span>
+                    <% end %>
+                <% else %>
+                    <%= link_to friend_request_path(friend_request[0].id), method: :delete, class: 'button is-small' do %>
+                        <span>Delete Request</span>
+                        <span class="icon">
+                            <%= icon('fas', 'user-minus') %>
+                        </span>
+                    <% end %>
                 <% end %>
-            <% else %>
-                <%= link_to friend_request_path(friend_request[0].id), method: :delete, class: 'button is-small' do %>
-                    <span>Delete Request</span>
-                    <span class="icon">
-                        <%= icon('fas', 'user-minus') %>
-                    </span>
-                <% end %>
-            <% end %>
-        </div>
+            </div>
+        <% end %>
     <% end %>
 </div>
