--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,11 @@
-<div class="comment">
-    <div class="column is-2">
-        <figure class="is-24x24 is-pulled-right">
-            <%= image_tag 'https://bulma.io/images/placeholders/24x24.png', alt: 'Placeholder Image' %>
+<div class="comment columns">
+    <div class="column is-2 is-align-self-center">
+        <figure class="image is-24x24 is-pulled-right">
+            <%= image_tag 'https://bulma.io/images/placeholders/24x24.png', alt: 'Placeholder Image', class: 'is-rounded' %>
         </figure>
     </div>
     <div class="column is-10">
-        <p><%=  %></p>
+        <p><%=  comment.user.name %></p>
         <%= comment.body %>
     </div>
 </div>
