Changing profile pictures to be rounded

--- a/app/views/friend_requests/_requests.html.erb
+++ b/app/views/friend_requests/_requests.html.erb
@@ -5,8 +5,8 @@
             <div class="media columns">
                 <div class="column is-12">
                     <div class="media-center">
-                        <figure class="is-48x48">
-                            <%= image_tag 'https://bulma.io/images/placeholders/96x96.png', alt: 'Placeholder Image' %>
+                        <figure class="image is-48x48">
+                            <%= image_tag 'https://bulma.io/images/placeholders/96x96.png', alt: 'Placeholder Image', class: 'is-rounded' %>
                         </figure>
                     </div>
                     <div class="media-content">
