--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -5,8 +5,8 @@
             <div class="card-content">
                 <div class="media  is-align-items-center">
                     <div class="media-left">
-                        <figure class="is-48x48">
-                            <%= image_tag 'https://bulma.io/images/placeholders/96x96.png', alt: 'Placeholder Image' %>
+                        <figure class="image is-96x96">
+                            <%= image_tag 'https://bulma.io/images/placeholders/96x96.png', alt: 'Placeholder Image', class: 'is-rounded' %>
                         </figure>
                     </div>
                     <div class="media-content">
