--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_with model: post do |f| %>
     <div class="post columns box m-2">
         <div class="column is-2">
-            <figure class="is-48x48 is-pulled-right">
-                <%= image_tag 'https://bulma.io/images/placeholders/48x48.png', alt: 'Placeholder Image' %>
+            <figure class="image is-48x48 is-pulled-right">
+                <%= image_tag 'https://bulma.io/images/placeholders/48x48.png', alt: 'Placeholder Image', class: 'is-rounded' %>
             </figure>
         </div>
         <div class="column is-10">
