--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_with url: post_comments_path(post_id: comment.post_id), method: :post do |f| %>
     <div class="comment_form columns m-2">
         <div class="column is-2">
-            <figure class="is-24x24 is-pulled-right">
-                <%= image_tag 'https://bulma.io/images/placeholders/24x24.png', alt: 'Placeholder Image' %>
+            <figure class="image is-24x24 is-pulled-right">
+                <%= image_tag 'https://bulma.io/images/placeholders/24x24.png', alt: 'Placeholder Image', class: 'is-rounded' %>
             </figure>
         </div>
         <div class="column is-10">
