--- a/app/views/notifications/_like.html.erb
+++ b/app/views/notifications/_like.html.erb
@@ -1,6 +1,6 @@
 <div class="column is-2 m-1">
-    <figure class="is-48x48">
-        <%= image_tag 'https://bulma.io/images/placeholders/48x48.png', alt: 'Placeholder Image' %>
+    <figure class="image is-48x48">
+        <%= image_tag 'https://bulma.io/images/placeholders/48x48.png', alt: 'Placeholder Image', class: 'is-rounded' %>
     </figure>
 </div>
 <div class="column is-8 is-align-self-center">
