--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,8 +1,8 @@
 <article class="post box m-2">
     <div class="columns">
         <div class="column is-2">
-            <figure class="is-48x48 is-pulled-right">
-                <%= image_tag 'https://bulma.io/images/placeholders/48x48.png', alt: 'Placeholder Image' %>
+            <figure class="image is-48x48 is-pulled-right">
+                <%= image_tag 'https://bulma.io/images/placeholders/48x48.png', alt: 'Placeholder Image', class: 'is-rounded' %>
             </figure>
         </div>
         <div class="column is-9">
