Adding helper to check if user has uploaded profile picture or if a default needs to be displayed. Updated all avatar image tags

--- a/app/views/friend_requests/_requests.html.erb
+++ b/app/views/friend_requests/_requests.html.erb
@@ -6,7 +6,7 @@
                 <div class="column is-12">
                     <div class="media-center">
                         <figure class="image is-48x48">
-                            <%= image_tag 'https://bulma.io/images/placeholders/96x96.png', alt: 'Placeholder Image', class: 'is-rounded' %>
+                            <%= image_tag avatar_select(requestor, [75,75]), alt: 'Placeholder Image', class: 'is-rounded' %>
                         </figure>
                     </div>
                     <div class="media-content">
