--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -6,7 +6,7 @@
                 <div class="media  is-align-items-center">
                     <div class="media-left">
                         <figure class="image is-96x96">
-                            <%= image_tag 'https://bulma.io/images/placeholders/96x96.png', alt: 'Placeholder Image', class: 'is-rounded' %>
+                            <%= image_tag avatar_select(friend, [150,150]), alt: 'Placeholder Image', class: 'is-rounded' %>
                         </figure>
                     </div>
                     <div class="media-content">
