--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -3,16 +3,16 @@
     <div class="columns">
         <div class="column is-10 is-offset-1">
             <% @notifications.each do |notification| %>
+                <% view = generate_view(notification) %>
+                <% request = view[:request] %>
                 <div class="notification p-2">
                     <div class="columns">
-                        <% view = generate_view(notification) %>
                         <div class="column is-2 m-1">
                             <figure class="image is-48x48">
-                                <%= image_tag 'https://bulma.io/images/placeholders/48x48.png', alt: 'Placeholder Image', class: 'is-rounded' %>
+                                <%= image_tag avatar_select(request.user, [48,48]), alt: 'Placeholder Image', class: 'is-rounded' %>
                             </figure>
                         </div>
                         <div class="column is-8 is-align-self-center">
-                            <% request = view[:request] %>
                             <p>
                                 <%= request.user.name + " " + view[:message] %>
                                 <%= link_to view[:button], view[:path], class: 'button is-info is-small is-pulled-right is-outlined' %>
