--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="columns mt-6">
-    <div class="column is-3 is-offset-2">
-        <figure class="image is-128x128">
-            <%= image_tag 'https://bulma.io/images/placeholders/128x128.png', alt: 'Placeholder Image', class: 'is-rounded' %>
+    <div class="column is-4">
+        <figure class="image is-square">
+            <%= image_tag avatar_select(current_user, [500,500]), alt: 'Placeholder Image', class: 'is-rounded' %>
         </figure>
     </div>
     <div class="column is-5">
