--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <div class="comment columns">
     <div class="column is-2 is-align-self-center">
         <figure class="image is-24x24 is-pulled-right">
-            <%= image_tag 'https://bulma.io/images/placeholders/24x24.png', alt: 'Placeholder Image', class: 'is-rounded' %>
+            <%= image_tag avatar_select(comment.user, [50,50]), alt: 'Placeholder Image', class: 'is-rounded' %>
         </figure>
     </div>
     <div class="column is-10">
