--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -2,7 +2,7 @@
     <div class="comment_form columns m-2">
         <div class="column is-2">
             <figure class="image is-24x24 is-pulled-right">
-                <%= image_tag 'https://bulma.io/images/placeholders/24x24.png', alt: 'Placeholder Image', class: 'is-rounded' %>
+                <%= image_tag avatar_select(current_user, [50,50]), alt: 'Placeholder Image', class: 'is-rounded' %>
             </figure>
         </div>
         <div class="column is-10">
