--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_with model: post do |f| %>
     <div class="post columns box m-2">
         <div class="column is-2">
-            <figure class="image is-48x48 is-pulled-right">
-                <%= image_tag 'https://bulma.io/images/placeholders/48x48.png', alt: 'Placeholder Image', class: 'is-rounded' %>
+            <figure class="image is-pulled-right">
+                <%= image_tag avatar_select(current_user, [48,48]), alt: 'Placeholder Image', class: 'is-rounded' %>
             </figure>
         </div>
         <div class="column is-10">
-            <p class="is-size-6 mb-2"><%= current_user.name %></p>
+            <p class="is-size-5 mb-2"><%= current_user.name %></p>
             <div class="field">
                 <div class="control">
                     <%= f.text_area :body, placeholder: "What's on your mind?", class: 'textarea is-small' %>
