--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,8 @@
 <div class="columns mt-6">
     <div class="column is-4">
         <%= form_with model: @user do |image| %>
-            <figure class="image">
-                <% if @user.avatar.attached? %>
-                    <%= image_tag @user.avatar, alt: 'Placeholder Image', class: 'is-rounded' %>
-                <% else %>
-                    <%= image_tag 'https://bulma.io/images/placeholders/128x128.png', alt: 'Placeholder Image', class: 'is-rounded' %>
-                <% end %>
+            <figure class="image is-square">
+                <%= image_tag avatar_select(current_user, [500, 500]), alt: 'Placeholder Image', class: 'is-rounded' %>
             </figure>
             
             <div class="is-flex is-justify-content-center">
@@ -26,7 +22,7 @@
             </div>
         <% end %>
     </div>
-    
+
     <div class="column is-6">
         <div id="user-info-form">
             <%= form_with model: @user do |f| %>
