--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with url: post_comments_path(post_id: comment.post_id), method: :post do |f| %>
-    <div class="comment_form columns m-2">
-        <div class="column is-2">
-            <figure class="image is-24x24 is-pulled-right">
+    <div class="comment_form columns">
+        <div class="column is-2 is-flex is-justify-content-right">
+            <figure class="image is-24x24">
                 <%= image_tag avatar_select(current_user, [50,50]), alt: 'Placeholder Image', class: 'is-rounded' %>
             </figure>
         </div>
