--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -28,7 +28,7 @@
             <%= form_with model: @user do |f| %>
                 <h3 class="is-size-3"><%= current_user.name%></h3>
                 <div class="user-info mt-3">
-                    <div class="field">
+                    <div class="field edit_user_field">
                         <div class="columns">
                             <span class="icon column is-1 mr-2">
                                 <%= icon('fas', 'envelope') %>
@@ -47,7 +47,7 @@
             <%= form_with model: @user do |reset| %>
                 <h4 class="is-size-4">Update Password</h4>
                 <div class="mt-3">
-                    <div class="field">
+                    <div class="field edit_user_field">
                         <div class="columns">
                             <span class="icon column is-1 mr-2">
                                 <%= icon('fas', 'lock') %>
@@ -56,7 +56,7 @@
                         </div>
                     </div>
 
-                    <div class="field">
+                    <div class="field edit_user_field">
                         <div class="columns">
                             <span class="icon column is-1 mr-2">
                                 <%= icon('fas', 'lock') %>
